--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,54 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+  background-color: #3d3d3d;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+header {
+  background-color: #0079d9;
+  width: 100%;
   color: white;
+  font-size: 3em;
+  text-align: left;
+  padding-left: 2em;
 }
 
-.App-intro {
-  font-size: large;
+.userInput {
+  margin: 1em;
+  text-align: left;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+form p {
+  color: white;
+  margin: 0;
+  padding-left: 0.5em;
+}
+
+input {
+  border-radius: 5px;
+  width: 20em;
+}
+
+button {
+  border-radius: 10px;
+  color: white;
+  padding: 0.5em;
+  width: 10em;
+  margin: 1em;
+}
+
+#submit {
+  background-color: #006ae7;
+}
+
+#listSubmit {
+  background-color: #00c443;
+}
+
+.songCards {
+  background-color: #59b9f3;
+  margin: 3px;
+  border-radius: 20px;
+  padding: 0.5em;
 }
