--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 
 body {
   background-color: #3d3d3d;
+  background-image: url('http://clipartix.com/wp-content/uploads/2017/07/Music-notes-musical-clip-art-free-music-note-clipart-2.jpeg');
+  background-size: contain;
 }
 
 header {
@@ -21,7 +23,7 @@ header {
 }
 
 form p {
-  color: white;
+  color: black;
   margin: 0;
   padding-left: 0.5em;
 }
@@ -49,7 +51,18 @@ button {
 
 .songCards {
   background-color: #59b9f3;
-  margin: 3px;
+  margin: 5px;
   border-radius: 20px;
-  padding: 0.5em;
+  padding: 1em;
+  text-align: left;
+  color: white;
+  line-height: 1em;
+}
+
+.wholePlayList {
+  width: 70%;
+}
+
+main {
+  display: flex;
 }
